# rdchat

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  buildsht.txt  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-desktop.yaml  build-mobile-android.yaml  release-relay-directory.yaml  release-relay.yaml  release-server.yaml
config/: config.dev.template.json  config.production.template.json  config.test.json
fluxer_api/: Dockerfile
fluxer_app/: index.html  package.json  rspack.config.mjs
fluxer_app/scripts/: GenerateColorSystem.tsx  GenerateEmojiSprites.tsx
fluxer_app/src/: Endpoints.tsx  env.d.ts  index.tsx
fluxer_desktop/: electron-builder.config.cjs  package.json
fluxer_docs/: .gitignore  docs.json  docusaurus.config.mjs  index.mdx  package-lock.json  package.json  quickstart.mdx  sidebars.mjs
fluxer_marketing/: Dockerfile
fluxer_media_proxy/: Dockerfile
fluxer_mobile/: .gitignore  README.md  package.json
fluxer_mobile/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
fluxer_mobile/src-tauri/capabilities/: default.json
fluxer_mobile/src-tauri/mobile/android/: build.gradle.kts  proguard-rules.pro
fluxer_mobile/src-tauri/mobile/android/src/main/: AndroidManifest.xml
fluxer_mobile/src-tauri/mobile/android/src/main/java/android/rdchat/ru/: RdchatMobilePlugin.kt  RdchatPushForegroundService.kt
fluxer_mobile/src-tauri/src/: lib.rs  main.rs  mobile_bridge.rs
fluxer_relay_directory/: Dockerfile
fluxer_server/: Dockerfile  Dockerfile.dev  package.json
scripts/: dev_bootstrap.sh
(+214 files in other folders)
