[package]
name = "fluxer_mobile"
version = "0.0.0"
description = "RdChat mobile client"
authors = ["RdChat Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://rdchat.ru"
edition = "2021"

[lib]
name = "fluxer_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"
